The hero text is now white across all pages

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
       line-height: 1.2;
       margin: 0;
       text-align: left;
+      color: white;
     }
 
     .hero__subtitle {
@@ -74,6 +75,7 @@
       line-height: var(--line-height-relaxed);
       margin: 0;
       text-align: left;
+      color: white;
     }
 
     .hero-image {
